# pefio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  c_file.h  cc_util.c  error.c  internal.h  premake5.lua
include/c_file/: c_file.h
src/: CMakeLists.txt  cf_internal.h  cf_util.c  error.c
src/windows/: cf_directory.c  cf_file.c  cf_file_view.c
test/: CMakeLists.txt  main.c
windows/: cf_directory.c  cf_file.c  cf_file_view.c
